--- a/css/flowers.css
+++ b/css/flowers.css
@@ -21,11 +21,11 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 h1 {
-    font-family: "Marck Script", serif;
+
     text-align: center;
     font-size: 60px;
     margin-bottom: 50px;
@@ -33,7 +33,8 @@ h1 {
 }
 
 .container {
-    width: 600px;
+    width: 90%;
+    max-width: 600px;
 }
 
 .container > .envelope-wrapper {
@@ -45,8 +46,8 @@ h1 {
 
 .envelope-wrapper > .envelope {
     position: relative;
-    width: 600px;
-    height: 500px;
+    width: 100%;
+    height: 400px;
 }
 
 .envelope-wrapper > .envelope::before {
@@ -56,7 +57,7 @@ h1 {
     left: 0;
     right: 0;
     z-index: 4;
-    border-top: 250px solid var(--envelope-tab);
+    border-top: 200px solid var(--envelope-tab);
     border-right: 300px solid transparent;
     border-left: 300px solid transparent;
     transform-origin: top;
@@ -227,7 +228,99 @@ h1 {
 
 }
 
+/*Esto es para control de muisica*/
 
+.control-musica {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: var(--heart-color);
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 20px;
+    cursor: pointer;
+    z-index: 1001; /* Para que esté sobre el sobre */
+    font-family: sans-serif;
+    box-shadow: 0 4px 10px var(--shadow-color);
+}
+
+/* flowers.css */
+.music-player {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: rgba(255, 197, 197, 0.9);
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px var(--shadow-color);
+    z-index: 1001;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.controls-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.control-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--heart-color);
+    border: none;
+    color: white;
+    width: 40px; /* Un poco más grande para el icono */
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.material-symbols-outlined {
+    font-size: 24px;
+}
+
+/* Animación de barritas */
+.visualizer {
+    display: flex;
+    align-items: flex-end;
+    gap: 10px;
+    height: 20px;
+}
+
+.visualizer span {
+    width: 5px;
+    background: var(--heart-color);
+    height: 5px;
+    border-radius: 2px;
+}
+
+.visualizer.playing span {
+    animation: bounce 0.5s ease infinite alternate;
+}
+
+.visualizer span:nth-child(2) { animation-delay: 0.2s; }
+.visualizer span:nth-child(3) { animation-delay: 0.4s; }
+.visualizer span:nth-child(4) { animation-delay: 0.1s; }
+
+@keyframes bounce {
+    from { height: 5px; }
+    to { height: 20px; }
+}
+
+/* Slider de volumen */
+#volume-slider {
+    width: 100px;
+    cursor: pointer;
+    accent-color: #803148;
+    background: #803148; /* Color del fondo de la barra */
+    border-radius: 10px;
+    
+}
 
 
 
